@@ -3,59 +3,40 @@ package com.careervector.config;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.http.HttpMethod; // Import this
+import org.springframework.mail.javamail.JavaMailSender;
+import org.springframework.mail.javamail.JavaMailSenderImpl;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
-import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
-import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.web.cors.CorsConfiguration;
 
-import java.util.Arrays;
 import java.util.List;
 
 @Configuration
-@EnableWebSecurity
 public class SecurityConfig {
-
-    @Value("${FRONTEND_URL}")
-    private String frontend_Url;
 
     @Bean
     public PasswordEncoder passwordEncoder() {
         return new BCryptPasswordEncoder();
     }
-
+    @Value("${FRONTEND_URL}")
+    private String frontend_Url;
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
-                .csrf(AbstractHttpConfigurer::disable)
+                .csrf(csrf -> csrf.disable()) // Disable CSRF for REST APIs
                 .cors(cors -> cors.configurationSource(request -> {
                     CorsConfiguration config = new CorsConfiguration();
-
-                    // CRITICAL: Explicitly allow Localhost and Production
-                    config.setAllowedOrigins(Arrays.asList(
-                            "http://localhost:5173",  // Frontend Localhost
-                            "http://localhost:3000",  // Alternate Localhost
-                            frontend_Url              // Your Deployed URL
-                    ));
-
-                    config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+                    config.setAllowedOrigins(List.of("*"));
+                    config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE"));
                     config.setAllowedHeaders(List.of("*"));
-                    config.setAllowCredentials(true);
                     return config;
                 }))
                 .authorizeHttpRequests(auth -> auth
-                        // FIX: Explicitly allow OPTIONS requests (Pre-flight checks)
-                        .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
-
-                        // Public Endpoints
-                        .requestMatchers("/api/student/**").permitAll()
-                        .requestMatchers("/api/recruiter/**").permitAll()
-                        .requestMatchers("/api/admins/**").permitAll()
-
-                        // All other requests need login
+                        .requestMatchers("/api/student/**").permitAll() // Public endpoints
+                        .requestMatchers("/api/recruiter/**").permitAll() // Public endpoints
+                        .requestMatchers("/api/admins/**").permitAll() // Public endpoints
                         .anyRequest().authenticated()
                 );
 
